ini nambahin testimoni nya kelvin

--- a/index.html
+++ b/index.html
@@ -232,13 +232,12 @@
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium
-                quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                I had the opportunity to collaborate with Farid on an iOS app development project during our internship at Apple Developer Academy @IL. Farid is incredibly talented in design and graphics, and his work always brought a creative edge to our project. Beyond his technical skills, Farid is an exceptional collaborator, consistently working with the team to achieve our goals. He’s always open to discussion and willingly shares his insights and experiences. I highly recommend Farid to any team looking for a dedicated designer with strong teamwork and collaboration skills.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
-              <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-              <h3>Saul Goodman</h3>
-              <h4>Ceo &amp; Founder</h4>
+              <img src="assets/img/testimonials/kelvinkelvin.png" class="testimonial-img" alt="">
+              <h3>Kelvin Kelvin</h3>
+              <h4>Apple Developer Academy @ Infinite Learning C24 |  Application Developer at Blue Silo | Graduated Student of Information Systems at Batam International University | Experience Front-End Developer at Altrovis</h4>
             </div>
           </div><!-- End testimonial item -->
 
@@ -396,7 +395,7 @@
 
   <div class="container">
 
-    <div class="ps-5 pe-5">
+    <div class="">  
       <div class="section-title">
         <h2>Professional Certifications</h2>
       </div>
@@ -903,7 +902,7 @@
         <div class="col-lg-4 col-md-6 portfolio-item filter-card">
           <div class="portfolio-wrap">
             <h4>Makassar Tourist Web</h4>
-            <img src="assets/img/portfolio/pf-web-wisata2.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/pf-web-wisata.webp" class="img-fluid" alt="">
             <div class="portfolio-info">
               <div class="portfolio-links">
                 
@@ -1038,7 +1037,7 @@
     <!-- Untitled -->
     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
       <div class="portfolio-wrap">
-        <h4>Title</h4>
+        <h4>Untitled</h4>
         <img src="assets/img/portfolio/pf-dummy-ios.png" class="img-fluid" alt="">
         <div class="portfolio-info">
           <div class="portfolio-links">
@@ -1053,8 +1052,8 @@
     <!-- Untitled -->
     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
       <div class="portfolio-wrap">
-        <h4>Title</h4>
-        <img src="assets/img/portfolio/pf-dummy-android.png" class="img-fluid" alt="">
+        <h4>Untitled</h4>
+        <img src="assets/img/portfolio/pf-dummy-ios.png" class="img-fluid" alt="">
         <div class="portfolio-info">
           <div class="portfolio-links">
             <a href="detailsAndroidIntermediet.html" data-gallery="portfolioDetailsGallery"
@@ -1068,8 +1067,8 @@
     <!-- Untitled -->
     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
       <div class="portfolio-wrap">
-        <h4>Title</h4>
-        <img src="assets/img/portfolio/pf-dummy-android.png" class="img-fluid" alt="">
+        <h4>Untitled</h4>
+        <img src="assets/img/portfolio/pf-dummy-ios.png" class="img-fluid" alt="">
         <div class="portfolio-info">
           <div class="portfolio-links">
             <a href="detailsAndroidIntermediet.html" data-gallery="portfolioDetailsGallery"
