--- a/pfdetail-websitewisata.html
+++ b/pfdetail-websitewisata.html
@@ -53,7 +53,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/pf-web-wisata2.png" alt="">
+                  <img src="assets/img/portfolio/pf-web-wisata.webp" alt="">
                 </div>
 
               </div>
