added new logo of this website and a name, also change the testimonials dummy pictures

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Personal Bootstrap Template</title>
+  <title>Farid Andika - Personal Website</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/farid-mac.png" rel="icon">
+  <link href="assets/img/farid-mac.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link
@@ -249,9 +249,9 @@
                 quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
-              <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-              <h3>Sara Wilsson</h3>
-              <h4>Designer</h4>
+              <img src="assets/img/testimonials/imagesdummy.png" class="testimonial-img" alt="">
+              <h3>Untitled</h3>
+              <h4>Roles</h4>
             </div>
           </div><!-- End testimonial item -->
 
@@ -263,9 +263,9 @@
                 labore quem eram duis noster aute amet eram fore quis sint minim.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
-              <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-              <h3>Jena Karlis</h3>
-              <h4>Store Owner</h4>
+              <img src="assets/img/testimonials/imagesdummy.png" class="testimonial-img" alt="">
+              <h3>Untitles</h3>
+              <h4>Roles</h4>
             </div>
           </div><!-- End testimonial item -->
 
@@ -277,9 +277,9 @@
                 dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
-              <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-              <h3>Matt Brandon</h3>
-              <h4>Freelancer</h4>
+              <img src="assets/img/testimonials/imagesdummy.png" class="testimonial-img" alt="">
+              <h3>Untitled</h3>
+              <h4>Roles</h4>
             </div>
           </div><!-- End testimonial item -->
 
@@ -291,9 +291,9 @@
                 labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
-              <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-              <h3>John Larson</h3>
-              <h4>Entrepreneur</h4>
+              <img src="assets/img/testimonials/imagesdummy.png class="testimonial-img" alt="">
+              <h3>Untitled</h3>
+              <h4>Roles</h4>
             </div>
           </div><!-- End testimonial item -->
 
