--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <ul>
           <li><a class="nav-link active" href="#header">Home</a></li>
           <li><a class="nav-link" href="#about">About</a></li>
-          <li><a href="assets/Farid_Andika_CV.pdf" target="_blank"> <span>Resume</span></a></li>
+          <li><a href="assets/2024 Resume - Farid Andika.pdf" target="_blank"> <span>Resume</span></a></li>
           <li><a class="nav-link" href="#education">Education</a></li>
           <li><a class="nav-link" href="#services">Certifications</a></li>
           <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
