--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@
           <h5><a href="https://stmikprofesional.ac.id/" target="_blank">STMIK Profesional</a></h5>
           <h6>2022 - 2024</h6>
           <p><em>Bachelor's Degree in Information System</em></p>
-          <p>GPA: 3.73 (4 Highest - 1 Lowest)</p>
+          <p>GPA: 3.7 (4 Highest - 1 Lowest)</p>
         </div>
   
         <div class="col-md-4 mt-4 mt-md-0 icon-box bg-blue" data-aos="fade-up" data-aos-delay="200">
@@ -781,7 +781,7 @@
           <h5><a href="https:telkomuniversity.ac.id"_blank">Telkom University (71 credits)</a></h5>
           <h6>2018 - 2020</h6>
           <p><em>Unfinished Degree, Telecommunication Engineering</em></p>
-          <p>GPA: 3.07 (4 Highest - 1 Lowest)</p>
+          <p>GPA: 3.1 (4 Highest - 1 Lowest)</p>
         </div>
       </div>
     
@@ -798,7 +798,7 @@
           <h5><a href="https://www.developeracademy.infinitelearning.id/" target="_blank">Apple Developer Academy @IL</a></h5>
           <h6>February 2024 - Desember 2024</h6>
           <p><em>Tech Learner | Focusing on iOS App Development</em></p>
-          <p>Graduate Status: Not Graduated Yet</p>
+          <p>Expected Graduation: December 2024</p>
         </div>
 
         <div class="col-md-4 mt-4 mt-md-0 icon-box bg-grey" data-aos="fade-up" data-aos-delay="200">
@@ -959,66 +959,6 @@
           </div>
         </div>
 
-        <!-- Android Intermediate 2 -->
-        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-          <div class="portfolio-wrap">
-            <h4>Android Intermediate 2</h4>
-            <img src="assets/img/portfolio/pf-dummy-android.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <div class="portfolio-links">
-                <a href="pfdetail-androidintermediate2.html" data-gallery="portfolioDetailsGallery"
-                  data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
-                    class="bx bx-zoom-in"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Android Intermediate 1 -->
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-          <div class="portfolio-wrap">
-            <h4>Android Intermediate 1</h4>
-            <img src="assets/img/portfolio/pf-dummy-android.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <div class="portfolio-links">
-                <a href="pfdetail-androidintermediate1.html" data-gallery="portfolioDetailsGallery"
-                  data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
-                    class="bx bx-zoom-in"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      <!-- Fundamental Android 2 -->
-      <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-        <div class="portfolio-wrap">
-          <h4>Fundamental Android 2</h4>
-          <img src="assets/img/portfolio/pf-dummy-android.png" class="img-fluid" alt="">
-          <div class="portfolio-info">
-            <div class="portfolio-links">
-              <a href="pfdetail-fundamentalandroid2.html" data-gallery="portfolioDetailsGallery"
-                data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
-                  class="bx bx-zoom-in"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Fundamental Android 1 -->
-      <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-        <div class="portfolio-wrap">
-          <h4>Fundamental Android 1</h4>
-          <img src="assets/img/portfolio/pf-dummy-android.png" class="img-fluid" alt="">
-          <div class="portfolio-info">
-            <div class="portfolio-links">
-              <a href="pfdetail-fundamentalandroid1.html" data-gallery="portfolioDetailsGallery"
-                data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
-                  class="bx bx-zoom-in"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-
       <!-- Android Pemula -->
       <div class="col-lg-4 col-md-6 portfolio-item filter-web">
         <div class="portfolio-wrap">
@@ -1049,35 +989,9 @@
       </div>
     </div>
 
-    <!-- Untitled -->
-    <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-      <div class="portfolio-wrap">
-        <h4>Untitled</h4>
-        <img src="assets/img/portfolio/pf-dummy-ios.png" class="img-fluid" alt="">
-        <div class="portfolio-info">
-          <div class="portfolio-links">
-            <a href="detailsAndroidIntermediet.html" data-gallery="portfolioDetailsGallery"
-              data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
-                class="bx bx-zoom-in"></i></a>
-          </div>
-        </div>
-      </div>
-    </div>
+  
 
-    <!-- Untitled -->
-    <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-      <div class="portfolio-wrap">
-        <h4>Untitled</h4>
-        <img src="assets/img/portfolio/pf-dummy-ios.png" class="img-fluid" alt="">
-        <div class="portfolio-info">
-          <div class="portfolio-links">
-            <a href="detailsAndroidIntermediet.html" data-gallery="portfolioDetailsGallery"
-              data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
-                class="bx bx-zoom-in"></i></a>
-          </div>
-        </div>
-      </div>
-    </div>
+    
 
       </div>
 
