add: testimonials of pak faisal

--- a/index.html
+++ b/index.html
@@ -245,13 +245,12 @@
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis
-                quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                His academic performance is very good, seen from the consistency of increasing knowledge in the field of Software Development, Diligent, consistent, and always willing to learn new things in the field of Software Development, Very good in terms of interacting with other students.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
-              <img src="assets/img/testimonials/imagesdummy.png" class="testimonial-img" alt="">
-              <h3>Untitled</h3>
-              <h4>Roles</h4>
+              <img src="assets/img/testimonials/pakfaisal.png" class="testimonial-img" alt="">
+              <h3>Ir. Muhammad Faisal, S.SI.,M.T., Ph.D.,IPM </h3>
+              <h4>Lecturer at STMIK Profesional Makassar</h4>
             </div>
           </div><!-- End testimonial item -->
 
