add amin ishaq testimonials

--- a/index.html
+++ b/index.html
@@ -258,13 +258,14 @@
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor
-                labore quem eram duis noster aute amet eram fore quis sint minim.
+                
+What sets Farid apart is not just his technical capabilities, but also his willingness to share knowledge and experiences with others. He is humble and always open to learning new things, constantly pushing himself to grow. His low-profile demeanor, combined with a strong drive to help those around him, makes him an invaluable team player.
+I highly recommend Farid to anyone looking for a highly dedicated, organized, and growth-oriented individual.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
-              <img src="assets/img/testimonials/imagesdummy.png" class="testimonial-img" alt="">
-              <h3>Untitles</h3>
-              <h4>Roles</h4>
+              <img src="assets/img/testimonials/aminishaq.png" class="testimonial-img" alt="">
+              <h3>Amin Ishaq</h3>
+              <h4>Bangkit Academy 2023 H2 Graduate | Mobile Developer | UI/UX Designer</h4>
             </div>
           </div><!-- End testimonial item -->
 
@@ -769,7 +770,7 @@
           <img src="assets/img/stiprof2.png" class="img-fluid" alt="">
           <h5><a href="https://stmikprofesional.ac.id/" target="_blank">STMIK Profesional</a></h5>
           <h6>2022 - 2024</h6>
-          <p><em>Bachelor's Degree in Information System</em></p>
+          <p><em>Bachelor's Degree in Information Systems</em></p>
           <p>GPA: 3.7 (4 Highest - 1 Lowest)</p>
         </div>
   
