--- a/index.html
+++ b/index.html
@@ -52,8 +52,14 @@
           <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
+      
       </nav><!-- .navbar -->
+
+
+
+<!--       
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/p80VyQ5wLvg?si=c7P7D5FwuAdVY9c8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <i class="bi bi-list mobile-nav-toggle"></i> -->
 
       <div class="social-links">
         <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
@@ -249,8 +255,8 @@
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
               <img src="assets/img/testimonials/pakfaisal.png" class="testimonial-img" alt="">
-              <h3>Ir. Muhammad Faisal, S.SI.,M.T., Ph.D.,IPM </h3>
-              <h4>Lecturer at STMIK Profesional Makassar</h4>
+              <h3>Associate Prof. Ir. Muhammad Faisal, S.SI.,M.T., Ph.D.,IPM </h3>
+              <h4>Researcher and Lecturer at STMIK Profesional Makassar</h4>
             </div>
           </div><!-- End testimonial item -->
 
@@ -755,7 +761,7 @@ I highly recommend Farid to anyone looking for a highly dedicated, organized, an
 </div>
 </div>
 
-  </section><!-- End Services Section -->
+</section><!-- End Services Section -->
 
 <!-- ======= Education Section ======= -->
 <section id="education" class="education">
