add ibu sry testi

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                His academic performance is very good, seen from the consistency of increasing knowledge in the field of Software Development, Diligent, consistent, and always willing to learn new things in the field of Software Development, Very good in terms of interacting with other students.
+                His academic performance is very good, as evidenced by his consistent increase in knowledge in the field of Software Development. He is diligent, consistent, and always willing to learn new things in this area. Additionally, he interacts very well with other students
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
               <img src="assets/img/testimonials/pakfaisal.png" class="testimonial-img" alt="">
@@ -279,13 +279,14 @@ I highly recommend Farid to anyone looking for a highly dedicated, organized, an
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim
-                dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                I know Farid very well as a student of great integrity. In every opportunity, Farid consistently demonstrates a commitment to ethics, honesty, and a high sense of responsibility, along with strong critical and analytical thinking skills.
+
+                Furthermore, Farid is very exploratory in seeking solutions; he never hesitates to try new approaches or explore innovative ideas. His enthusiasm for learning sets him apart among his peers.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
-              <img src="assets/img/testimonials/imagesdummy.png" class="testimonial-img" alt="">
-              <h3>Untitled</h3>
-              <h4>Roles</h4>
+              <img src="assets/img/testimonials/ibusry.png" class="testimonial-img" alt="">
+              <h3>Sry Yunarti, S.H., M.Cs.</h3>
+              <h4>Researcher and Lecturer at STMIK Profesional Makassar</h4>
             </div>
           </div><!-- End testimonial item -->
 
