adjust the telkomuniversity hyperlink at Education section

--- a/index.html
+++ b/index.html
@@ -260,19 +260,23 @@
                 Student of Information Systems at Batam International University | Experience Front-End Developer at
                 Altrovis</h4>
             </div>
+          
           </div><!-- End testimonial item -->
 
           <div class="swiper-slide">
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                His academic performance is very good, as evidenced by his consistent increase in knowledge in the field
-                of Software Development. He is diligent, consistent, and always willing to learn new things in this
-                area. Additionally, he interacts very well with other students
+                I know Farid very well as a student of great integrity. In every opportunity, Farid consistently
+                demonstrates a commitment to ethics, honesty, and a high sense of responsibility, along with strong
+                critical and analytical thinking skills.
+
+                Furthermore, Farid is very exploratory in seeking solutions; he never hesitates to try new approaches or
+                explore innovative ideas. His enthusiasm for learning sets him apart among his peers.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
-              <img src="assets/img/testimonials/pakfaisal.png" class="testimonial-img" alt="">
-              <h3>Associate Prof. Ir. Muhammad Faisal, S.SI.,M.T., Ph.D.,IPM </h3>
+              <img src="assets/img/testimonials/ibusry.png" class="testimonial-img" alt="">
+              <h3>Sry Yunarti, S.H., M.Cs.</h3>
               <h4>Researcher and Lecturer at STMIK Profesional Makassar</h4>
             </div>
           </div><!-- End testimonial item -->
@@ -294,25 +298,23 @@
               <h3>Amin Ishaq</h3>
               <h4>Bangkit Academy 2023 H2 Graduate | Mobile Developer | UI/UX Designer</h4>
             </div>
-          </div><!-- End testimonial item -->
 
-          <div class="swiper-slide">
-            <div class="testimonial-item">
-              <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                I know Farid very well as a student of great integrity. In every opportunity, Farid consistently
-                demonstrates a commitment to ethics, honesty, and a high sense of responsibility, along with strong
-                critical and analytical thinking skills.
+        </div><!-- End testimonial item -->
 
-                Furthermore, Farid is very exploratory in seeking solutions; he never hesitates to try new approaches or
-                explore innovative ideas. His enthusiasm for learning sets him apart among his peers.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-              </p>
-              <img src="assets/img/testimonials/ibusry.png" class="testimonial-img" alt="">
-              <h3>Sry Yunarti, S.H., M.Cs.</h3>
-              <h4>Researcher and Lecturer at STMIK Profesional Makassar</h4>
-            </div>
-          </div><!-- End testimonial item -->
+        <div class="swiper-slide">
+          <div class="testimonial-item">
+            <p>
+              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+              His academic performance is very good, as evidenced by his consistent increase in knowledge in the field
+              of Software Development. He is diligent, consistent, and always willing to learn new things in this
+              area. Additionally, he interacts very well with other students
+              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+            </p>
+            <img src="assets/img/testimonials/pakfaisal.png" class="testimonial-img" alt="">
+            <h3>Associate Prof. Ir. Muhammad Faisal, S.SI.,M.T., Ph.D.,IPM </h3>
+            <h4>Researcher and Lecturer at STMIK Profesional Makassar</h4>
+          </div>
+        </div><!-- End testimonial item -->
 
           <div class="swiper-slide">
             <div class="testimonial-item">
@@ -824,8 +826,7 @@
           <div class="col-md-4 mt-4 mt-md-0 icon-box bg-blue" data-aos="fade-up" data-aos-delay="200">
             <img src="assets/img/telyu2.webp" class="img-fluid" alt="">
             <!-- <h5><a href="https://drive.google.com/file/d/1yikKDcZrRftKOccfAxYodpXt0PJjHvWG/view?usp=sharing target="_blank">Telkom University (71 credits)</a></h5> -->
-
-            <h5><a href="https:telkomuniversity.ac.id" _blank">Telkom University (71 credits)</a></h5>
+            <h5><a href="https:telkomuniversity.ac.id/" target="_blank">Telkom University (71 credits)</a></h5>
             <h6>2018 - 2020</h6>
             <p><em>Unfinished Degree, Telecommunication Engineering</em></p>
             <p>GPA: 3.1 (4 Highest - 1 Lowest)</p>
