added latest 3 portfolio with its images and links

--- a/index.html
+++ b/index.html
@@ -904,11 +904,42 @@
 
       <div class="row portfolio-container">
 
+        <div class="row portfolio-container">
+
+          <!-- Pixshoot -->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <h4>Pixshoot</h4>
+              <img src="assets/img/portfolio/pf-pixshoot.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="pfdetail-pixshoot.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                    class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-zoom-in"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+  
+          <!-- FIND CIMIS HOUSE -->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <h4>Find Cimi's House</h4>
+              <img src="assets/img/portfolio/pf-findcimishouse.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="pfdetail-findcimishose.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                    class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-zoom-in"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
         <!-- Cognivy-->
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <h4>Cognivy</h4>
-            <img src="assets/img/portfolio/pf-cognify.png" class="img-fluid" alt="">
+            <h4>Cognify</h4>
+            <img src="assets/img/portfolio/pf-cognify copy.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <div class="portfolio-links">
 
