--- a/pfdetail-cognivy.html
+++ b/pfdetail-cognivy.html
@@ -47,13 +47,13 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">Toolis: Make Every Word Readable</h2>
+            <h2 class="portfolio-title">Cognivy : Alzheimer Dimenthia Theraphy</h2>
 
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/pf-cognify.png" alt="">
+                  <img src="assets/img/portfolio/pf-cognify copy.png" alt="">
                 </div>
 
               </div>
