adjust the details of cognify

--- a/pfdetail-cognivy.html
+++ b/pfdetail-cognivy.html
@@ -67,18 +67,18 @@
             <ul>
               <li><strong>Platform</strong>: iOS</li>
               <li><strong>Project date</strong>: Juli, 2024</li>
-              <li><strong>Project URL</strong>: <a href="#">-</a></li>
+              <li><strong>Project URL</strong>: <a href="https://apps.apple.com/id/app/cognify/id6648012294">-</a></li>
             </ul>
 
     
             <p>
-              Toolis is an iOS app that can enhance your handwriting readability by providing detailed analysis on word readability, spacing consistency, and the slope of your baselines. With Apple's Vision framework, Toolis observes and processes words from images, applying a set of algorithms to handle unreadable words, ensure consistent spacing, and analyze baseline slopes.            </p>
+              An AR app that help early-stage Alzheimer's patients with memory problem to do cognitive memory therapy by placing virtual items in specific locations with relevan context and reordering them after randomization.            </p>
             <p>
               Features:
               <br>
-                  🗒️ Multiple Pangram Sentences: Use SwiftUI to display the interface of four pangram sentences with a shuffle button that allows you to change them anytime you need.</br>
-                  📸 Capture Analysis: Use AVFoundation on the camera and Vision Framework to analyze the quality of your handwriting in depth, including word readability, spacing consistency, and the slope of your baselines.</br>
-                  📝 Progress Tracking: Use SwiftData to store your analysis results every time you analyze with the date.</br>
+                 - AR Interaction : uses AR to place virtual items in real-world environments, providing an interactive experience for memory therapy, Patients perform cognitive exercises by reordering virtual objects, helping to stimulate memory recall and cognitive function, Objects are randomly shuffled, and patients are tasked with reordering them to their original locations, improving recall skills.
+                 - Theraphy Tracking Progress :  Tracks their progress over time each session, adapting to their abilities for better therapy outcomes.
+              </br>
 
             </p>
 
