adjust the css: certification sections col 6 tidy up

--- a/index.html
+++ b/index.html
@@ -534,6 +534,8 @@
             <!-- Bangkit Academy -->
             <img src="assets/img/certifications/bangkitdistinction-farid.webp" class="img-thumbnail" alt="">
             <div class="portfolio-info">
+              <h3>Bangkit Academy - Certificate Distinction Graduate</h3>
+              
               <div class="portfolio-links">
                 <a href="assets/img/certifications/bangkitdistinction-farid.webp" data-gallery="portfolioGallery"
                   class="portfolio-lightbox"><i class="bx bx-zoom-in"></i></a>
@@ -660,149 +662,137 @@
             </div>
           </div>
         </div>
+      </div>
 
-        <div class="row portfolio-container" style="position: relative; height: 319.75px;">
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <!-- MEMULAI PEMROGRAMAN DENGAN KOTLIN -->
-              <img src="assets/img/certifications/kotlinprogramming.webp" class="img-thumbnail" alt="">
-              <div class="portfolio-info">
-                <h3>Dicoding - Memulai Pemrograman Dengan Kotlin</h3>
-                <div class="portfolio-links">
-                  <a href="assets/img/certifications/kotlinprogramming.webp" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox"><i class="bx bx-zoom-in"></i></a>
-                  <a href="https://www.dicoding.com/certificates/2VX36KK9NXYQ" data-gallery="portfolioDetailsGallery"
-                    data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
-                      class="bx bx-link "></i></a>
-                </div>
+      <div class="row portfolio-container" style="position: relative; height: 319.75px;">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <!-- MEMULAI PEMROGRAMAN DENGAN KOTLIN -->
+            <img src="assets/img/certifications/kotlinprogramming.webp" class="img-thumbnail" alt="">
+            <div class="portfolio-info">
+              <h3>Dicoding - Memulai Pemrograman Dengan Kotlin</h3>
+              <div class="portfolio-links">
+                <a href="assets/img/certifications/kotlinprogramming.webp" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-zoom-in"></i></a>
+                <a href="https://www.dicoding.com/certificates/2VX36KK9NXYQ" data-gallery="portfolioDetailsGallery"
+                  data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
+                    class="bx bx-link "></i></a>
               </div>
             </div>
           </div>
+        </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <!-- MEMULAI GIT DAN GITHUB -->
-              <img src="assets/img/certifications/gitdangithub.webp" class="img-thumbnail" alt="">
-              <div class="portfolio-info">
-                <h3>Dicoding - Git dan Github</h3>
-                <div class="portfolio-links">
-                  <a href="assets/img/certifications/gitdangithub.webp" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox"><i class="bx bx-zoom-in"></i></a>
-                  <a href="https://www.dicoding.com/certificates/2VX36KK9NXYQ" data-gallery="portfolioDetailsGallery"
-                    data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
-                      class="bx bx-link "></i></a>
-                </div>
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <!-- MEMULAI GIT DAN GITHUB -->
+            <img src="assets/img/certifications/gitdangithub.webp" class="img-thumbnail" alt="">
+            <div class="portfolio-info">
+              <h3>Dicoding - Git dan Github</h3>
+              <div class="portfolio-links">
+                <a href="assets/img/certifications/gitdangithub.webp" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-zoom-in"></i></a>
+                <a href="https://www.dicoding.com/certificates/2VX36KK9NXYQ" data-gallery="portfolioDetailsGallery"
+                  data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
+                    class="bx bx-link "></i></a>
               </div>
             </div>
           </div>
+        </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <!-- Belajar Prinsip Pemrograman SOLID -->
-              <img src="assets/img/certifications/solidprogramming.webp" class="img-thumbnail" alt="">
-              <div class="portfolio-info">
-                <div class="portfolio-links">
-                  <a href="assets/img/certifications/solidprogramming.webp" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox"><i class="bx bx-zoom-in"></i></a>
-                  <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery"
-                    data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
-                      class="bx bx-link"></i></a>
-                </div>
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <!-- Belajar Prinsip Pemrograman SOLID -->
+            <img src="assets/img/certifications/solidprogramming.webp" class="img-thumbnail" alt="">
+            <div class="portfolio-info">
+              <div class="portfolio-links">
+                <a href="assets/img/certifications/solidprogramming.webp" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-zoom-in"></i></a>
+                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery"
+                  data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
+                    class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
+        </div>
 
-          <div class="row portfolio-container" style="position: relative; height: 319.75px;">
-            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-              <div class="portfolio-wrap">
-                <!-- MEMULAI PEMROGRAMAN DENGAN KOTLIN -->
-                <img src="assets/img/certifications/kotlinprogramming.webp" class="img-thumbnail" alt="">
-                <div class="portfolio-info">
-                  <h3>Dicoding - Memulai Pemrograman Dengan Kotlin</h3>
-                  <div class="portfolio-links">
-                    <a href="assets/img/certifications/kotlinprogramming.webp" data-gallery="portfolioGallery"
-                      class="portfolio-lightbox"><i class="bx bx-zoom-in"></i></a>
-                    <a href="https://www.dicoding.com/certificates/2VX36KK9NXYQ" data-gallery="portfolioDetailsGallery"
-                      data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
-                        class="bx bx-link "></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
+      </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-              <div class="portfolio-wrap">
-                <!-- MEMULAI GIT DAN GITHUB -->
-                <img src="assets/img/certifications/gitdangithub.webp" class="img-thumbnail" alt="">
-                <div class="portfolio-info">
-                  <h3>Dicoding - Git dan Github</h3>
-                  <div class="portfolio-links">
-                    <a href="assets/img/certifications/gitdangithub.webp" data-gallery="portfolioGallery"
-                      class="portfolio-lightbox"><i class="bx bx-zoom-in"></i></a>
-                    <a href="https://www.dicoding.com/certificates/2VX36KK9NXYQ" data-gallery="portfolioDetailsGallery"
-                      data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
-                        class="bx bx-link "></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-              <div class="portfolio-wrap">
-                <!-- Belajar Prinsip Pemrograman SOLID -->
-                <img src="assets/img/certifications/solidprogramming.webp" class="img-thumbnail" alt="">
-                <div class="portfolio-info">
-                  <div class="portfolio-links">
-                    <a href="assets/img/certifications/solidprogramming.webp" data-gallery="portfolioGallery"
-                      class="portfolio-lightbox"><i class="bx bx-zoom-in"></i></a>
-                    <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery"
-                      data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
-                        class="bx bx-link"></i></a>
-                  </div>
-                </div>
+      <div class="row portfolio-container" style="position: relative; height: 319.75px;">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <!-- MEMULAI PEMROGRAMAN DENGAN KOTLIN -->
+            <img src="assets/img/certifications/kotlinprogramming.webp" class="img-thumbnail" alt="">
+            <div class="portfolio-info">
+              <h3>Dicoding - Memulai Pemrograman Dengan Kotlin</h3>
+              <div class="portfolio-links">
+                <a href="assets/img/certifications/kotlinprogramming.webp" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-zoom-in"></i></a>
+                <a href="https://www.dicoding.com/certificates/2VX36KK9NXYQ" data-gallery="portfolioDetailsGallery"
+                  data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
+                    class="bx bx-link "></i></a>
               </div>
             </div>
           </div>
+        </div>
 
-          <div class="section-title">
-            <h2>awards</h2>
-          </div>
-
-          <div class="row portfolio-container" style="height: 319px;">
-            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-              <div class="portfolio-wrap">
-                <!-- Sertif awards - KPPS -->
-                <img src="assets/img/certifications/kpu2020-farid.webp" class="img-thumbnail" alt="">
-                <div class="portfolio-info">
-                  <h3>KPU Makassar - Panitia KPPS</h3>
-                  <div class="portfolio-links">
-                    <a href="assets/img/certifications/kpu2020-farid.webp" data-gallery="portfolioGallery"
-                      class="portfolio-lightbox"><i class="bx bx-zoom-in"></i></a>
-                    <a href="https://www.dicoding.com/certificates/2VX36KK9NXYQ" data-gallery="portfolioDetailsGallery"
-                      data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
-                        class="bx bx-link "></i></a>
-                  </div>
-                </div>
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <!-- MEMULAI GIT DAN GITHUB -->
+            <img src="assets/img/certifications/gitdangithub.webp" class="img-thumbnail" alt="">
+            <div class="portfolio-info">
+              <h3>Dicoding - Git dan Github</h3>
+              <div class="portfolio-links">
+                <a href="assets/img/certifications/gitdangithub.webp" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-zoom-in"></i></a>
+                <a href="https://www.dicoding.com/certificates/2VX36KK9NXYQ" data-gallery="portfolioDetailsGallery"
+                  data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
+                    class="bx bx-link "></i></a>
               </div>
             </div>
-
           </div>
+        </div>
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <!-- Belajar Prinsip Pemrograman SOLID -->
+            <img src="assets/img/certifications/solidprogramming.webp" class="img-thumbnail" alt="">
+            <div class="portfolio-info">
+              <div class="portfolio-links">
+                <a href="assets/img/certifications/solidprogramming.webp" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-zoom-in"></i></a>
+                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery"
+                  data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
+                    class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-    </div>
-    </div>
-    </div>
-    </div>
+
+      <div class="section-title">
+        <h2>awards</h2>
+      </div>
+
+      <div class="row portfolio-container" style="height: 319px;">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <!-- Sertif awards - KPPS -->
+            <img src="assets/img/certifications/kpu2020-farid.webp" class="img-thumbnail" alt="">
+            <div class="portfolio-info">
+              <h3>KPU Makassar - Panitia KPPS</h3>
+              <div class="portfolio-links">
+                <a href="assets/img/certifications/kpu2020-farid.webp" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-zoom-in"></i></a>
+                <a href="https://www.dicoding.com/certificates/2VX36KK9NXYQ" data-gallery="portfolioDetailsGallery"
+                  data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
+                    class="bx bx-link "></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
     <div class="row portfolio-container" style="height: auto;">
-
-    </div>
-    </div>
-    </div>
-    </div>
-    </div>
 
   </section><!-- End Services Section -->
 
