--- a/pfdetail-pixshoot.html
+++ b/pfdetail-pixshoot.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Personal Bootstrap Template</title>
+  <title>Portfolio Details - Pixshoot</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -27,13 +27,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Personal
-  * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
-  * Updated: Mar 17 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -47,8 +40,7 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">Pixshoot: Perfectly Frame Your Moments, Every Time
-            </h2>
+            <h2 class="portfolio-title">Pixshoot: Perfectly Frame Your Moments, Every Time</h2>
 
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
@@ -64,25 +56,42 @@
           </div>
 
           <div class="col-lg-4 portfolio-info">
-            <h3>Project information</h3>
+            <h3>Project Information</h3>
             <ul>
               <li><strong>Platform</strong>: iOS</li>
-              <li><strong>Project date</strong>: November, 2024</li>
-              <li><strong>Project URL</strong>: <a href="#">-</a></li>
+              <li><strong>Project Date</strong>: November, 2024</li>
+              <li><strong>Project URL</strong>:<a href="https://apps.apple.com/id/app/pixshoot/id6737460616"> App Store </a></li>
             </ul>
 
-    
-            <p>
-              Pixshoot is your ultimate photo assistant when asking someone else to take your picture! With Pixshoot, you can confidently hand over your device, knowing you'll get exactly the frame you're aiming for. The app leverages gyroscope technology to guide the person taking your photo into the perfect position. Then, with just one tap, Pixshoot automatically captures multiple shots at varying scales in one session, ensuring you'll have a range of options to choose from. Never miss the perfect angle or framing again-Pixshoot has you covered!            <p>
-              Features:
-              <br>
-                  <!-- 1. Multiple Pangram Sentences: Use SwiftUI to display the interface of four pangram sentences with a shuffle button that allows you to change them anytime you need.</br>
-                  2. Capture Analysis: Use AVFoundation on the camera and Vision Framework to analyze the quality of your handwriting in depth, including word readability, spacing consistency, and the slope of your baselines.</br>
-                  3. Progress Tracking: Use SwiftData to store your analysis results every time you analyze with the date.</br> -->
+            <h4>Project Overview</h4>
+            <p>Pixshoot is a travel photography app designed for solo travelers to get the perfect shot when asking someone to take their picture. With features like Angle Lock and Burst Mode, the app ensures the user captures the best shot with ease, even when others help them.</p>
 
-            </p>
+            <h4>Key Features</h4>
+            <ul>
+              <li><strong>Angle Lock:</strong> Uses AR technology, gyroscope, and AR anchors with overlays to lock the phone’s orientation. This ensures photos remain level and aligned, even if the phone is tilted.</li>
+              <li><strong>Burst Mode:</strong> Captures a series of photos at three different zoom levels (x1, x2, 0.5x) with a single tap. This feature helps users select the best shot from multiple perspectives.</li>
+              <li><strong>Live Preview & Haptic Feedback:</strong> Displays the camera feed directly on the Apple Watch for easy previewing, and provides haptic feedback to notify users when a photo is taken, keeping them aware without needing to look at the screen.</li>
+            </ul>
 
-            </div>
+            <h4>My Role on This Project:</h4>
+            <h5>As iOS Developer:</h5>
+            <ul>
+              <li>Developed core features including Angle Lock, utilizing ARKit and AVFoundation to enable smooth switching between these frameworks for enhanced camera functionality.</li>
+              <li>Collaborated with a team of 4 developers, ensuring all project goals were aligned and the system design was cohesive across all development phases.</li>
+              <li>Reviewed and merged pull requests from other developers on GitHub, maintaining clean code and ensuring the project followed version control best practices.</li>
+            </ul>
+
+            <h5>As Researcher:</h5>
+            <ul>
+              <li>Designed and conducted user research by creating interview questions for travelers, performing user interviews, and analyzing results to develop user personas, customer journey maps, and actionable solution concepts.</li>
+              <li>Performed feasibility studies of Apple’s native frameworks, evaluating their compatibility with Pixshoot’s features and identifying the most viable technologies for integration.</li>
+              <li>Led 3 rounds of usability testing with over 25 participants, achieving a 9.5/10 satisfaction score, ensuring the final product met user needs and delivered an intuitive experience.</li>
+            </ul>
+
+            <h4>Reflections</h4>
+            <p>Working on Pixshoot was a rewarding experience, marking my second project using AVFoundation for camera handling (after Toolis). By leveraging ARKit, AVFoundation, and WatchKit, I created a seamless travel photography app. Overcoming technical challenges and refining the app based on user feedback showed how Apple's frameworks can elevate everyday tasks. This project reinforced my belief that well-integrated technology can transform simple ideas into meaningful user experiences.</p>
+
+          </div>
 
         </div>
 
@@ -92,11 +101,6 @@
   </main><!-- End #main -->
 
   <div class="credits">
-    <!-- All the links in the footer should remain intact. -->
-    <!-- You can delete the links only if you purchased the pro version. -->
-    <!-- Licensing information: https://bootstrapmade.com/license/ -->
-    <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
   </div>
 
   <!-- Vendor JS Files -->
